add change pwd
